# argus

./: Cargo.toml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/migrations/: 20251220104257_create_users_table.sql  20251220192344_create_users_table.sql
crates/api/src/: main.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: main.rs
crates/my_core/: Cargo.toml
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
