[package]
name = "api"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
dotenvy = "0.15"
my_core = {path = "../my_core"}