[package]
name = "api"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "postgres", "macros", "tls-native-tls"] }
dotenvy = "0.15"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9"
chrono = "0.4"
anyhow = "1"
my_core = {path = "../my_core"}