[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.6.3", features = ["full"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15"
futures-util = "0.3.32"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "macros"] }
